Fix undo merging a layer that is cloned

1) Add two paint layers. Assume they are "Layer 1" and "Layer 2," from bottom to top.
2) Add a clone layer copying from "Layer 1." Assume the clone is called "Layer 3."
3) Move "Layer 3" below "Layer 1."
4) In the layer docker, click on "Layer 1."
5) Hold Ctrl, click on "Layer 2."
6) Right click, then select "Remove Layer."

Expected: Layer 1 and Layer 2 are removed. Layer 3 turns into a Paint Layer.

7) Undo.

Expected: Layer 1 and Layer 2 are restored. Layer 3 goes back into a Clone Layer.

BUG:397836
Reviewers: #krita, dkazakov
Reviewed By: #krita, dkazakov
Subscribers: dkazakov
Tags: #krita
Differential Revision: https://phabricator.kde.org/D20314